# MLP

./: mnist.py  pyproject.toml
