[tool.poetry]
name = "機器學習"
version = "0.1.0"
description = ""
authors = ["amy <jolin51120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
keras = "^3.1.1"
tensorflow = "^2.16.1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
